# us-population

./: CONTRIBUTING.rst  MANIFEST.in  README.rst  setup.cfg
bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
tests/: test_import.py
us_population/app/: core.py
us_population/module/: __init__.py
vue-components/: package-lock.json  package.json  vite.config.js
