[metadata]
name = us-population
version = 1.0.0
description = A example trame dashboard for US population
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick O'Leary
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-components 
    trame-markdown
    trame-matplotlib
    trame-plotly
    trame-vega
    trame-vuetify
    pandas
    numpy
    altair
    matplotlib
    mpld3
    plotly
    vega

[options.entry_points]
console_scripts =
    us-population = us_population.app:main
jupyter_serverproxy_servers =
    us-population = us_population.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
